added comments to cookbook

--- a/cookbook.ipynb
+++ b/cookbook.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# current issue is in finding reactions where species have '(' or ')'\n",
+    "\n",
     "This notebook describes some of the methods in this package and how they can be used."
    ]
   },
