--- a/cookbook.ipynb
+++ b/cookbook.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": "true"
+   },
+   "source": [
+    "# Table of Contents\n",
+    " <p><div class=\"lev1 toc-item\"><a href=\"#Cookbook-for-cantera_tools-module\" data-toc-modified-id=\"Cookbook-for-cantera_tools-module-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Cookbook for cantera_tools module</a></div><div class=\"lev2 toc-item\"><a href=\"#running-a-simulation\" data-toc-modified-id=\"running-a-simulation-11\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>running a simulation</a></div><div class=\"lev3 toc-item\"><a href=\"#run_simulation-example\" data-toc-modified-id=\"run_simulation-example-111\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span><code>run_simulation</code> example</a></div><div class=\"lev3 toc-item\"><a href=\"#find_ignition_delay-example\" data-toc-modified-id=\"find_ignition_delay-example-112\"><span class=\"toc-item-num\">1.1.2&nbsp;&nbsp;</span><code>find_ignition_delay</code> example</a></div><div class=\"lev3 toc-item\"><a href=\"#write-your-own-method\" data-toc-modified-id=\"write-your-own-method-113\"><span class=\"toc-item-num\">1.1.3&nbsp;&nbsp;</span>write your own method</a></div><div class=\"lev2 toc-item\"><a href=\"#reducing-a-mechanism-by-reactions\" data-toc-modified-id=\"reducing-a-mechanism-by-reactions-12\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>reducing a mechanism by reactions</a></div><div class=\"lev2 toc-item\"><a href=\"#analyzing-data\" data-toc-modified-id=\"analyzing-data-13\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>analyzing data</a></div><div class=\"lev3 toc-item\"><a href=\"#obtaining-reaction-and-species-data\" data-toc-modified-id=\"obtaining-reaction-and-species-data-131\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>obtaining reaction and species data</a></div><div class=\"lev3 toc-item\"><a href=\"#finding-stoichiometric-coefficients\" data-toc-modified-id=\"finding-stoichiometric-coefficients-132\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span>finding stoichiometric coefficients</a></div><div class=\"lev2 toc-item\"><a href=\"#analyzing-data\" data-toc-modified-id=\"analyzing-data-14\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>analyzing data</a></div><div class=\"lev3 toc-item\"><a href=\"#finding-stoichiometric-coefficients\" data-toc-modified-id=\"finding-stoichiometric-coefficients-141\"><span class=\"toc-item-num\">1.4.1&nbsp;&nbsp;</span>finding stoichiometric coefficients</a></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# current issue is in finding reactions where species have '(' or ')'\n",
+    "# Cookbook for cantera_tools module\n",
     "\n",
     "This notebook describes some of the methods in this package and how they can be used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,14 +32,13 @@
     "from scipy import integrate\n",
     "import cantera as ct\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +49,7 @@
        "<module 'cantera_tools' from '/home/mark/workspace/tools/cantera_tools.py'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,12 +63,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## running a simple simulation"
+    "## running a simulation\n",
+    "\n",
+    "Simulations can be run in two ways: \n",
+    "\n",
+    "1. using methods like `run_simulation` or `find_ignition_delay` which create the simulation objects and store the data for you\n",
+    "2. writing the own simulation objects and saving the data in a more flexible form"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `run_simulation` example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model_link = 'cookbook_files/model2.cti'\n",
+    "\n",
+    "# creates the cantera Solution object\n",
+    "solution = ctt.create_mechanism(model_link)\n",
+    "\n",
+    "# finds initial mole fraction for a fuel-air ratio of 1 with 30%/70% methanol/propane blend\n",
+    "# for non-combustion conditions, this can be replaced by a dictionary of values {'CH3OH': 0.3, 'C3H8':0.7}\n",
+    "mole_fractions = {'H2':5, 'O2':1, 'AR': 0.3}\n",
+    "\n",
+    "# set initial conditions of solution in kelvin pascals and mole fractions\n",
+    "conditions = 1000, 10**6, mole_fractions\n",
+    "\n",
+    "# store 100 times between 10^-8s and 1s, with an initial point at t=0\n",
+    "times = np.logspace(-8,0,num=100)\n",
+    "times = np.insert(times,0,0)\n",
+    "\n",
+    "# run the simulation\n",
+    "outputs = ctt.run_simulation(solution, conditions, times,\n",
+    "                                      condition_type = 'constant-temperature-and-pressure',\n",
+    "                                      output_reactions = False,\n",
+    "                                      output_directional_reactions = True)\n",
+    "\n",
+    "# you can combine outputs how you would like with pd.concat\n",
+    "result = pd.concat([outputs['conditions'], outputs['species'], outputs['directional_reactions']], axis = 'columns')\n",
+    "\n",
+    "# data can be saved to avoid rerunning the simulation for data analysis (in most cases)\n",
+    "result.to_pickle('cookbook_files/{}.pic'.format('run_simulation_example'))\n",
+    "result.to_csv('cookbook_files/{}.csv'.format('run_simulation_example'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `find_ignition_delay` example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -71,33 +137,32 @@
     "solution = ctt.create_mechanism(model_link)\n",
     "\n",
     "# finds initial mole fraction for a fuel-air ratio of 1 with 30%/70% methanol/propane blend\n",
+    "# for non-combustion conditions, this can be replaced by a dictionary of values {'CH3OH': 0.3, 'C3H8':0.7}\n",
     "mole_fractions = ctt.get_initial_mole_fractions(stoich_ratio = 1,\n",
     "                                               fuel_mole_ratios = [.3,.7],\n",
     "                                               oxygen_per_fuel_at_stoich_list = [1.5,5],\n",
     "                                               fuels = ['CH3OH','C3H8'])\n",
     "\n",
     "# set initial conditions of solution in kelvin pascals and mole fractions\n",
-    "solution.TPX = 750, 10**6, mole_fractions\n",
-    "\n",
-    "# setup adiabatic constant volume reactor\n",
-    "reactor = ct.IdealGasReactor(solution)\n",
-    "simulator = ct.ReactorNet([reactor])\n",
-    "solution = reactor.kinetics\n",
-    "\n",
-    "# setup data storage using functions from this class - this saves states, species and reaction profiles\n",
-    "df = pd.DataFrame()\n",
-    "df = ctt.append_data_to_df(simulator, solution, df, add_rxns=True)\n",
+    "conditions = 750, 10**6, mole_fractions\n",
     "\n",
     "# run simulation\n",
-    "time_final = 50 #seconds\n",
-    "while simulator.time < time_final:\n",
-    "    simulator.step(time_final)\n",
-    "    # appends data to DataFrame\n",
-    "    df = ctt.append_data_to_df(simulator,solution,df, add_rxns=True)\n",
+    "ig_delay, run_data, _ = ctt.find_ignition_delay(solution, conditions,\n",
+    "                                               output_profile = True,\n",
+    "                                               skip_data = 1000)\n",
     "\n",
     "\n",
     "# data can be saved to avoid rerunning the simulation for data analysis (in most cases)\n",
-    "df.to_pickle('cookbook_files/%s.pic' % (mole_fractions))"
+    "run_data.to_pickle('cookbook_files/{}.pic'.format('find_ignition_delay_example'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### write your own method\n",
+    "\n",
+    "If neither of these methods work for you, you can find the source code of either method and modify it to your needs."
    ]
   },
   {
@@ -110,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -216,252 +281,10 @@
     }
    ],
    "source": [
-    "# it can also deal with a list of reactions\n",
+    "# methods can also deal with a list of reactions\n",
     "reactions_with_species = ctt.find_reactions(df,'CH2OH(29)')\n",
     "ctt.obtain_stoichiometry_of_species(solution,'CH2OH(29)',reactions_with_species)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3967</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3968</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3969</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3970</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3971</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3972</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3973</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3974</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3975</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3976</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3977</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3978</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3979</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3980</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3981</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3982</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3983</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3984</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3985</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3986</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3987</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3988</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3989</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3990</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3991</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3992</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3993</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3994</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3995</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3996</th>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3997 rows × 0 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, ...]\n",
-       "\n",
-       "[3997 rows x 0 columns]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reactions_with_species"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## analyzing data\n",
-    "### finding stoichiometric coefficients"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -481,6 +304,26 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.4.5"
+  },
+  "toc": {
+   "nav_menu": {
+    "height": "171px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": true,
+   "toc_position": {
+    "height": "702px",
+    "left": "0px",
+    "right": "1228px",
+    "top": "106px",
+    "width": "212px"
+   },
+   "toc_section_display": "block",
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
