--- a/cookbook.ipynb
+++ b/cookbook.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Table of Contents\n",
-    " <p><div class=\"lev1 toc-item\"><a href=\"#Cookbook-for-cantera_tools-module\" data-toc-modified-id=\"Cookbook-for-cantera_tools-module-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Cookbook for cantera_tools module</a></div><div class=\"lev2 toc-item\"><a href=\"#better-names-for-RMG-mechanisms\" data-toc-modified-id=\"better-names-for-RMG-mechanisms-11\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>better names for RMG mechanisms</a></div><div class=\"lev2 toc-item\"><a href=\"#reducing-a-mechanism-by-reactions\" data-toc-modified-id=\"reducing-a-mechanism-by-reactions-12\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>reducing a mechanism by reactions</a></div><div class=\"lev2 toc-item\"><a href=\"#running-a-simulation\" data-toc-modified-id=\"running-a-simulation-13\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>running a simulation</a></div><div class=\"lev3 toc-item\"><a href=\"#run_simulation-example\" data-toc-modified-id=\"run_simulation-example-131\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span><code>run_simulation</code> example</a></div><div class=\"lev3 toc-item\"><a href=\"#run_simulation_till_conversion-example\" data-toc-modified-id=\"run_simulation_till_conversion-example-132\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span><code>run_simulation_till_conversion</code> example</a></div><div class=\"lev3 toc-item\"><a href=\"#find_ignition_delay-example\" data-toc-modified-id=\"find_ignition_delay-example-133\"><span class=\"toc-item-num\">1.3.3&nbsp;&nbsp;</span><code>find_ignition_delay</code> example</a></div><div class=\"lev2 toc-item\"><a href=\"#analyzing-data\" data-toc-modified-id=\"analyzing-data-14\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>analyzing data</a></div><div class=\"lev3 toc-item\"><a href=\"#obtaining-reaction-and-species-data\" data-toc-modified-id=\"obtaining-reaction-and-species-data-141\"><span class=\"toc-item-num\">1.4.1&nbsp;&nbsp;</span>obtaining reaction and species data</a></div><div class=\"lev3 toc-item\"><a href=\"#looking-at-a-list-of-reactions-consuming/producing-a-molecule\" data-toc-modified-id=\"looking-at-a-list-of-reactions-consuming/producing-a-molecule-142\"><span class=\"toc-item-num\">1.4.2&nbsp;&nbsp;</span>looking at a list of reactions consuming/producing a molecule</a></div><div class=\"lev3 toc-item\"><a href=\"#view-branching-ratio\" data-toc-modified-id=\"view-branching-ratio-143\"><span class=\"toc-item-num\">1.4.3&nbsp;&nbsp;</span>view branching ratio</a></div><div class=\"lev3 toc-item\"><a href=\"#creating-flux-diagrams\" data-toc-modified-id=\"creating-flux-diagrams-144\"><span class=\"toc-item-num\">1.4.4&nbsp;&nbsp;</span>creating flux diagrams</a></div>"
+    " <p><div class=\"lev1 toc-item\"><a href=\"#Cookbook-for-cantera_tools-module\" data-toc-modified-id=\"Cookbook-for-cantera_tools-module-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Cookbook for cantera_tools module</a></div><div class=\"lev2 toc-item\"><a href=\"#better-names-for-RMG-mechanisms\" data-toc-modified-id=\"better-names-for-RMG-mechanisms-11\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>better names for RMG mechanisms</a></div><div class=\"lev2 toc-item\"><a href=\"#reducing-a-mechanism-by-reactions\" data-toc-modified-id=\"reducing-a-mechanism-by-reactions-12\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>reducing a mechanism by reactions</a></div><div class=\"lev2 toc-item\"><a href=\"#running-a-simulation\" data-toc-modified-id=\"running-a-simulation-13\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>running a simulation</a></div><div class=\"lev3 toc-item\"><a href=\"#run_simulation-example\" data-toc-modified-id=\"run_simulation-example-131\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span><code>run_simulation</code> example</a></div><div class=\"lev3 toc-item\"><a href=\"#run_simulation_till_conversion-example\" data-toc-modified-id=\"run_simulation_till_conversion-example-132\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span><code>run_simulation_till_conversion</code> example</a></div><div class=\"lev3 toc-item\"><a href=\"#find_ignition_delay-example\" data-toc-modified-id=\"find_ignition_delay-example-133\"><span class=\"toc-item-num\">1.3.3&nbsp;&nbsp;</span><code>find_ignition_delay</code> example</a></div><div class=\"lev3 toc-item\"><a href=\"#set-specific-state-variables-with-time\" data-toc-modified-id=\"set-specific-state-variables-with-time-134\"><span class=\"toc-item-num\">1.3.4&nbsp;&nbsp;</span>set specific state variables with time</a></div><div class=\"lev2 toc-item\"><a href=\"#analyzing-data\" data-toc-modified-id=\"analyzing-data-14\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>analyzing data</a></div><div class=\"lev3 toc-item\"><a href=\"#obtaining-reaction-and-species-data\" data-toc-modified-id=\"obtaining-reaction-and-species-data-141\"><span class=\"toc-item-num\">1.4.1&nbsp;&nbsp;</span>obtaining reaction and species data</a></div><div class=\"lev3 toc-item\"><a href=\"#looking-at-a-list-of-reactions-consuming/producing-a-molecule\" data-toc-modified-id=\"looking-at-a-list-of-reactions-consuming/producing-a-molecule-142\"><span class=\"toc-item-num\">1.4.2&nbsp;&nbsp;</span>looking at a list of reactions consuming/producing a molecule</a></div><div class=\"lev3 toc-item\"><a href=\"#view-branching-ratio\" data-toc-modified-id=\"view-branching-ratio-143\"><span class=\"toc-item-num\">1.4.3&nbsp;&nbsp;</span>view branching ratio</a></div><div class=\"lev3 toc-item\"><a href=\"#creating-flux-diagrams\" data-toc-modified-id=\"creating-flux-diagrams-144\"><span class=\"toc-item-num\">1.4.4&nbsp;&nbsp;</span>creating flux diagrams</a></div>"
    ]
   },
   {
@@ -69,7 +69,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model_link = 'cookbook_files/model.cti'\n",
@@ -121,7 +123,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model_link = 'cookbook_files/model2.cti'\n",
@@ -129,8 +133,7 @@
     "# creates the cantera Solution object\n",
     "solution = ctt.create_mechanism(model_link)\n",
     "\n",
-    "# finds initial mole fraction for a fuel-air ratio of 1 with 30%/70% methanol/propane blend\n",
-    "# for non-combustion conditions, this can be replaced by a dictionary of values {'CH3OH': 0.3, 'C3H8':0.7}\n",
+    "#initial mole fractions\n",
     "mole_fractions = {'H2':5, 'O2':1, 'AR': 0.3}\n",
     "\n",
     "# set initial conditions of solution in kelvin pascals and mole fractions\n",
@@ -165,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model_link = 'cookbook_files/model.cti'\n",
@@ -204,7 +209,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model_link = 'cookbook_files/model.cti'\n",
@@ -233,6 +240,50 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### set specific state variables with time\n",
+    "Specific state variables (like temperature) can be set across a simulation.\n",
+    "To use this, change the `condition_type` to the string that describes the\n",
+    "situation (list of acceptable strings is described in the docstring of `run_simulation`.\n",
+    "\n",
+    "Typically you also need to supply a list of the state variable to change which corresponds with the times in the `times` variable. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "model_link = 'cookbook_files/model2.cti'\n",
+    "\n",
+    "# creates the cantera Solution object\n",
+    "solution = ctt.create_mechanism(model_link)\n",
+    "\n",
+    "# set initial conditions of solution in kelvin pascals and mole fractions\n",
+    "conditions = 1000, 10**6, mole_fractions\n",
+    "solution.TPX = conditions\n",
+    "# store 100 times between 10^-8s and 1s, with an initial point at t=0\n",
+    "times = np.logspace(-8,0,num=100)\n",
+    "times = np.insert(times,0,0)\n",
+    "# set a linear ramp temperature from 800 to 1000 at 1e-4s followed by constant temperature\n",
+    "ramp_temperatures = 800 + 2000000 * times[:50]\n",
+    "constant_temperatures = np.ones(51) * 1000\n",
+    "temperatures = np.concatenate((ramp_temperatures,constant_temperatures))\n",
+    "# run the simulation\n",
+    "outputs = ctt.run_simulation(solution, times,\n",
+    "                                      condition_type = 'specified-temperature-constant-volume',\n",
+    "                                      output_reactions = False,\n",
+    "                                      output_directional_reactions = False,\n",
+    "                                      output_rop_roc= False,\n",
+    "                                      temperature_values = temperatures)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -245,7 +296,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'output_till_conversion' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-0c0b105b89af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# this outputs a dataframe of just species\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mspecies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutput_till_conversion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'species'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mreactions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutput_till_conversion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'net_reactions'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mforward_and_reverse_reactions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutput_till_conversion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'directional_reactions'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnet_observables\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutput_till_conversion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'conditions'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'output_till_conversion' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# this outputs a dataframe of just species\n",
     "species = output_till_conversion['species']\n",
@@ -269,7 +332,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "propane_production = ctt.consumption_pathways(df=reactions,\n",
